doc: add documentation for the new debugging feature (#43)