@@ -4,7 +4,7 @@ title: Debugging guide
 seotitle: Debugging guide for Gatling scripts
 description: Debug Gatling scripts by printing session values or with logback.
 lead: Debug Gatling scripts by printing session values or with logback.
-date: 2021-04-20T18:30:56+02:00
+date: 2025-02-10T18:30:56+02:00
 ---
 
 ## Printing Session Values
@@ -50,3 +50,44 @@ And reference that appender:
 ```
 
 This can be useful if you run at one user and remove all logging apart from the HTML, and open the file in your browser.
+
+## Using a Java debugger
+
+{{< alert warning >}}
+Requires at least:
+
+* Gatling 3.13.4
+* gatling-maven-plugin 4.14.0
+* gatling-gradle-plugin 3.13.4
+
+{{< /alert >}}
+
+When launching Gatling from Maven or Gradle, you can attach a debugger so you can execute step-by-step.
+
+### Maven with IntelliJ IDEA
+
+Please check the official [IntelliJ documentation](https://www.jetbrains.com/help/idea/run-debug-configuration-maven.html).
+
+Here are the mandatory steps:
+
+1. Click on `Add Configuration` or `Edit Configurations` to the left of the `Run` and `Debug` buttons on the right side of the top bar.
+2. Click on the `+` sign and add a new `Maven` configuration
+3. Enter `gatling:test -Dgatling.sameProcess=true` in the `Command line` field
+4. Click on `Modify` Java Options, select `Add JVM options` and enter `--add-opens=java.base/java.lang=ALL-UNNAMED`
+5. Click on the `Debug` button to launch
+
+{{< img src="intellij-maven-debug.png" alt="InjelliJ Maven Debug Configuration" >}}
+
+### Gradle with IntelliJ IDEA
+
+Please check the official [IntelliJ documentation](https://www.jetbrains.com/help/idea/run-debug-gradle.html).
+
+Here are the mandatory steps:
+
+1. Click on `Add Configuration` or `Edit Configurations` to the left of the `Run` and `Debug` buttons on the right side of the top bar.
+2. Click on the `+` sign and add a new `Gradle` configuration
+3. Enter `gatlingRun --same-process` in the `Task and arguments` field
+4. Click on `Modify options`, select `Add VM options` and enter `--add-opens=java.base/java.lang=ALL-UNNAMED`
+5. Click on the `Debug` button to launch
+
+{{< img src="intellij-maven-debug.png" alt="InjelliJ Gradle Debug Configuration" >}}
